<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/backgroundColour">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/home"/>
        <item
            android:id="@+id/navLogs"
            android:title="@string/logs"/>
        <item
            android:id="@+id/navWorkouts"
            android:title="@string/workouts" />
        <item
            android:id="@+id/navStats"
            android:title="@string/statistics" />
        <item
            android:id="@+id/navFAQ"
            android:title="@string/faq" />
    </group>



</menu>